<resources>
    <string name="app_name">SlamBookApp</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="yes_account">Already have an account?</string>
    <string name="create_account">Create account with</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="row_users_id">ID: Their id</string>

    <string-array name="questions_array">
        <item>Who is your crush?</item>
        <item>What is your first name?</item>
        <item>What is your last name?</item>
        <item>What is your middle name?</item>
        <item>Who is your mother?</item>
        <item>Who is your crush?</item>
        <item>Who is your crush?</item>
        <item>Who is your crush?</item>
    </string-array>
</resources>